# ChatGTK

./: .gitignore  ChatGTK.py  LICENSE  README.md  ai_providers.py  call_openai_api (modified snippet)  chatgtk.sh  debug_export.tex  debug_failed.tex  install.sh  installer.sh  latex_utils.py  markup_utils.py  pyproject.toml  requirements.txt  settings.cfg  test13 (copy 1).py  test13.py  test13.py.old  test_controller.py  test_controller_integration.py  test_conversation.py  test_events.py  test_export.py  test_phase2_integration.py  test_phase3_integration.py  test_phase6_integration.py  test_repositories.py  test_service_integration.py  test_services.py  test_settings_manager.py  test_ui_components.py  todo.txt  utils.py
New Folder/: test13.py
packaging/windows/: ChatGTK.spec  runtime_hook.py
scripts/windows/: build_exe.sh
src/: ChatGTK.py  __init__.py  ai_providers.py  audio.py  config.py  controller.py  conversation.py  dialogs.py  gtk_utils.py  latex_utils.py  markup_utils.py  message_renderer.py  ollama_provider.py  tools.py  utils.py
src/events/: __init__.py  event_system.py
src/memory/: __init__.py  embedding_provider.py  memory_repository.py  memory_service.py  schema.py
src/model_cards/: __init__.py  catalog.py  (+3 more)
temp/: settings.cfg  test13.py  test13_fromulae.py
tests/: __init__.py  test_document_conversion_service.py  test_document_service.py  test_export_parsing.py  test_latex_export.py  test_latex_utils.py  test_local_models.py  test_model_cards.py  test_search_tool.py  test_search_tool_imports_dir.py  test_text_edit_tool.py  verify_wolfram.py
(+38 files in other folders)
