[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgtk"
version = "0.1.0"
description = "A GTK-based Linux desktop client for OpenAI's API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "PyGObject>=3.42.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "pathlib>=1.0.1",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: GTK",
]

[project.scripts]
chatgtk = "src.ChatGTK:main"

[project.urls]
"Homepage" = "https://github.com/rabfulton/ChatGTK"
"Bug Tracker" = "https://github.com/rabfulton/ChatGTK/issues" 